--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 *.dll
 *.dylib
 
+# clangd
+*/.cache/clangd/*
+.qtc_clangd
+
 # Qt-es
 object_script.*.Release
 object_script.*.Debug
@@ -31,6 +35,7 @@ Makefile*
 *build-*
 *.qm
 *.prl
+.qmake.stash
 
 # Qt unit tests
 target_wrapper.*
